--- a/StocksWithFriends/StocksWithFriends/packages.config
+++ b/StocksWithFriends/StocksWithFriends/packages.config
@@ -12,4 +12,5 @@
   <package id="Microsoft.AspNet.WebPages" version="1.0.20105.408" targetFramework="net40" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net40" />
   <package id="Modernizr" version="2.5.3" targetFramework="net40" />
+  <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net40" />
 </packages>
