--- a/StocksWithFriends/StocksWithFriends/Web.config
+++ b/StocksWithFriends/StocksWithFriends/Web.config
@@ -50,6 +50,12 @@
             change the connection string named "DefaultConnection" to connect to an instance
             of SQL Server (including SQL Azure and SQL  Compact) instead of to SQL Server Express.
       -->
+    <!--
+            If you are deploying to a cloud environment that has multiple web server instances,
+            you should change session state mode from "InProc" to "Custom". In addition,
+            change the connection string named "DefaultConnection" to connect to an instance
+            of SQL Server (including SQL Azure and SQL  Compact) instead of to SQL Server Express.
+      -->
     <sessionState mode="InProc" customProvider="DefaultSessionProvider">
       <providers>
         <add name="DefaultSessionProvider" type="System.Web.Providers.DefaultSessionStateProvider, System.Web.Providers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" connectionStringName="DefaultConnection" />
@@ -77,5 +83,6 @@
   </entityFramework>
   <connectionStrings>
     <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-StocksWithFriends-20130404092119;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-StocksWithFriends-20130404092119.mdf" />
+    <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=aspnet-StocksWithFriends-20130405145509;Integrated Security=SSPI" />
   </connectionStrings>
 </configuration>
