--- a/StocksWithFriends/StocksWithFriends/StocksWithFriends.csproj
+++ b/StocksWithFriends/StocksWithFriends/StocksWithFriends.csproj
@@ -205,6 +205,7 @@
     <Content Include="Views\Stock\Index.cshtml" />
     <Content Include="Views\Facebook\Home.cshtml" />
     <Content Include="Views\Facebook\UpdateStatus.cshtml" />
+    <Content Include="Views\Facebook\UploadPhoto.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
