--- a/StocksWithFriends/StocksWithFriends/StocksWithFriends.csproj
+++ b/StocksWithFriends/StocksWithFriends/StocksWithFriends.csproj
@@ -207,6 +207,7 @@
     <Content Include="Views\Web.config" />
     <Content Include="Views\Stock\Index.cshtml" />
     <Content Include="Views\Facebook\Home.cshtml" />
+    <Content Include="Views\Facebook\PostToFriendsWall.cshtml" />
     <Content Include="Views\Facebook\UpdateStatus.cshtml" />
     <Content Include="Views\Facebook\UploadPhoto.cshtml" />
     <Content Include="Views\Stock\Ticker.cshtml" />
