--- a/StocksWithFriends/StocksWithFriends/StocksWithFriends.csproj
+++ b/StocksWithFriends/StocksWithFriends/StocksWithFriends.csproj
@@ -221,6 +221,9 @@
     <Content Include="Views\Facebook\FriendRequest.cshtml" />
     <Content Include="Views\Stock\Ticker.cshtml" />
     <Content Include="Views\Calender\Index.cshtml" />
+    <Content Include="Views\Facebook\PostToFriendsWall.cshtml">
+      <SubType>Code</SubType>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
