--- a/StocksWithFriends/StocksWithFriends/StocksWithFriends.csproj
+++ b/StocksWithFriends/StocksWithFriends/StocksWithFriends.csproj
@@ -171,7 +171,19 @@
     <Content Include="Content\themes\base\minified\jquery.ui.tabs.min.css" />
     <Content Include="Content\themes\base\minified\jquery.ui.theme.min.css" />
     <Content Include="Global.asax" />
+    <None Include="Properties\PublishProfiles\Profile.pubxml" />
+    <Content Include="Resources\uploadify\check-exists.php" />
+    <Content Include="Resources\uploadify\index.php" />
+    <Content Include="Resources\uploadify\uploadify.php" />
     <None Include="Scripts\jquery-1.7.1.intellisense.js" />
+    <Content Include="Resources\images\logo.png" />
+    <Content Include="Resources\uploadify\Change Log.txt" />
+    <Content Include="Resources\uploadify\jquery.uploadify.js" />
+    <Content Include="Resources\uploadify\jquery.uploadify.min.js" />
+    <Content Include="Resources\uploadify\license.txt" />
+    <Content Include="Resources\uploadify\uploadify-cancel.png" />
+    <Content Include="Resources\uploadify\uploadify.css" />
+    <Content Include="Resources\uploadify\uploadify.swf" />
     <Content Include="Scripts\fullcalendar.js" />
     <Content Include="Scripts\fullcalendar.min.js" />
     <Content Include="Scripts\gcal.js" />
