Supports adding calendar events and reading them server-side.

--- a/StocksWithFriends/StocksWithFriends/StocksWithFriends.csproj
+++ b/StocksWithFriends/StocksWithFriends/StocksWithFriends.csproj
@@ -110,6 +110,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountModels.cs" />
+    <Compile Include="Models\CalendarEvent.cs" />
     <Compile Include="Models\NewsFeedItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
