--- a/StocksWithFriends/StocksWithFriends/packages.config
+++ b/StocksWithFriends/StocksWithFriends/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="EntityFramework" version="5.0.0" targetFramework="net40" />
   <package id="Facebook" version="6.4.0" targetFramework="net40" />
+  <package id="Fleck" version="0.9.6.19" targetFramework="net40" />
   <package id="jQuery" version="1.7.1.1" targetFramework="net40" />
   <package id="jQuery.UI.Combined" version="1.8.20.1" targetFramework="net40" />
   <package id="jQuery.Validation" version="1.9.0.1" targetFramework="net40" />
