added chat box to front of we bsite, removed chat nav bar.

--- a/StocksWithFriends/StocksWithFriends/StocksWithFriends.csproj
+++ b/StocksWithFriends/StocksWithFriends/StocksWithFriends.csproj
@@ -151,7 +151,7 @@
     <Content Include="Content\Feed.css" />
     <Content Include="Content\fullcalendar.css" />
     <Content Include="Content\fullcalendar.print.css" />
-    <Content Include="Content\DialogFormat.css" />
+    <Content Include="Content\Chat.css" />
     <Content Include="Content\themes\base\images\ui-bg_flat_0_aaaaaa_40x100.png" />
     <Content Include="Content\themes\base\images\ui-bg_flat_75_ffffff_40x100.png" />
     <Content Include="Content\themes\base\images\ui-bg_glass_55_fbf9ee_1x400.png" />
@@ -227,6 +227,7 @@
     </Content>
     <None Include="Properties\PublishProfiles\Default Settings.pubxml" />
     <None Include="Properties\PublishProfiles\Profile.pubxml" />
+    <Content Include="Resources\images\chatHistorySmallest.png" />
     <Content Include="Resources\uploadify\check-exists.php" />
     <Content Include="Resources\uploadify\index.php" />
     <Content Include="Resources\uploadify\uploadify.php" />
